--- a/about.html
+++ b/about.html
@@ -15,43 +15,87 @@
 
   <body>
     <div class="container about-page">
-      About Leverage agile frameworks to provide a robust synopsis for high
-      level overviews. Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition.
-      Organically grow the holistic world view of disruptive innovation via
-      workplace diversity and empowerment.
+      <header>
+        <img class="logo" src="img/lambda-black.png" alt="Lambda Logo" />
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="#">Products</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+        <img src="img/jumbo-about.png" alt="Image of a blurred highway" />
+        <div class="header-about-text">
+          <h2>About</h2>
+          Leverage agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+          Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </div>
+      </header>
 
-      <img src="img/about-plan.png" alt="strategy" />
+      <section id="main-content">
+        <div class="about-plan">
+          <img src="img/about-plan.png" alt="strategy" />
 
-      Strategy Iterative approaches to corporate strategy foster collaborative
-      thinking to further the overall value proposition. Learn More
+          <h2>Strategy</h2>
+          <p class="main-content-text">
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
 
-      <img src="img/about-working.png" alt="strategy" />
+        <div class="about-working">
+          <img src="img/about-working.png" alt="strategy" />
 
-      How We Work Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More
+          <h2>How We Work</h2>
+          <p class="main-content-text">
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
 
-      <img src="img/about-office.png" alt="strategy" />
+        <div class="about-office">
+          <img src="img/about-office.png" alt="strategy" />
 
-      Places We Work Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More
+          <h2>Places We Work</h2>
+          <p class="main-content-text">
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
 
-      <img src="img/about-meeting.png" alt="strategy" />
+        <div class="about-meeting">
+          <img src="img/about-meeting.png" alt="strategy" />
 
-      Collaboration Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More Let's Work Together Leverage agile frameworks to provide a robust
-      synopsis for high level overviews. Iterative approaches to corporate
-      strategy foster collaborative thinking to further the overall value
-      proposition. Organically grow the holistic world view of disruptive
-      innovation via workplace diversity and empowerment.
+          <h2>Collaboration</h2>
+          <p class="main-content-text">
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+      </section>
+
+      <section id="about-bottom-content">
+        <div class="about-bottom-text">
+          <h2>Let's Work Together</h2>
+          Leverage agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+          Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </div>
+      </section>
 
       <footer>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">About</a>
+          <a href="about.html">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
