--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
-        <img src="img/jumbo-about.png" alt="Image of a blurred highway" />
+        <img src="img/jumbo.jpg" alt="Image of a blurred highway" />
         <div class="header-about-text">
-          <h2>About</h2>
+          <h2>Contact Us</h2>
           Leverage agile frameworks to provide a robust synopsis for high level
           overviews. Iterative approaches to corporate strategy foster
           collaborative thinking to further the overall value proposition.
@@ -35,55 +35,29 @@
         </div>
       </header>
 
-      <section id="main-content">
-        <div class="about-plan">
-          <img src="img/about-plan.png" alt="strategy" />
-
-          <h2>Strategy</h2>
-          <p class="main-content-text">
-            Iterative approaches to corporate strategy foster collaborative
-            thinking to further the overall value proposition.
-          </p>
-          <a href="#">Learn More</a>
-        </div>
-
-        <div class="about-working">
-          <img src="img/about-working.png" alt="strategy" />
-
-          <h2>How We Work</h2>
-          <p class="main-content-text">
-            Iterative approaches to corporate strategy foster collaborative
-            thinking to further the overall value proposition.
-          </p>
-          <a href="#">Learn More</a>
-        </div>
-
-        <div class="about-office">
-          <img src="img/about-office.png" alt="strategy" />
-
-          <h2>Places We Work</h2>
-          <p class="main-content-text">
-            Iterative approaches to corporate strategy foster collaborative
-            thinking to further the overall value proposition.
-          </p>
-          <a href="#">Learn More</a>
-        </div>
-
-        <div class="about-meeting">
-          <img src="img/about-meeting.png" alt="strategy" />
-
-          <h2>Collaboration</h2>
-          <p class="main-content-text">
-            Iterative approaches to corporate strategy foster collaborative
-            thinking to further the overall value proposition.
-          </p>
-          <a href="#">Learn More</a>
+      <section id="contact-content">
+        <div class="contact-us">
+          <form action="#">
+            <p>
+              <label for="name">Name: </label><br />
+              <input type="text" name="name" id="name" />
+            </p>
+            <p>
+              <label for="email">Email: </label><br />
+              <input type="text" name="email" id="email" />
+            </p>
+            <p>
+              <label for="comments">Comments:</label><br />
+              <textarea name="comments" id="" cols="70" rows="10"></textarea>
+            </p>
+            <input type="submit" />
+          </form>
         </div>
       </section>
 
       <section id="about-bottom-content">
         <div class="about-bottom-text">
-          <h2>Let's Work Together</h2>
+          <h2>We Appreciate Your Feedback</h2>
           Leverage agile frameworks to provide a robust synopsis for high level
           overviews. Iterative approaches to corporate strategy foster
           collaborative thinking to further the overall value proposition.
